--- a/src/federated-learning/env/CIC_centralized.ipynb
+++ b/src/federated-learning/env/CIC_centralized.ipynb
@@ -13,7 +13,15 @@
    "execution_count": 1,
    "id": "53333cd6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-10 13:41:54.611004: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -37,13 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0ac61e16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = read_dataset('../../../../datasets/CICDataset/processed_data/pre_processed_dataframes/features_1')\n",
-    "Y = read_dataset('../../../../datasets/CICDataset/processed_data/pre_processed_dataframes/label_1_multiclass')"
+    "X = read_dataset('../../../datasets/CICDataset/processed_data/pre_processed_dataframes/features_1')\n",
+    "Y = read_dataset('../../../datasets/CICDataset/processed_data/pre_processed_dataframes/label_1_multiclass')"
    ]
   },
   {
@@ -56,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7a33e981",
    "metadata": {},
    "outputs": [],
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d3f0cdc1",
    "metadata": {},
    "outputs": [],
@@ -92,10 +100,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "17718a92",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n",
+      "29\n"
+     ]
+    }
+   ],
    "source": [
     "classes = len(Y.unique())"
    ]
@@ -110,29 +127,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "d43e2547",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-11-28 15:06:41.464972: E tensorflow/stream_executor/cuda/cuda_driver.cc:271] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n",
-      "2022-11-28 15:06:41.465067: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (mangaratiba): /proc/driver/nvidia/version does not exist\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#model = tf.keras.applications.NASNetLarge((None,29),classes=classes, weights=None)\n",
     "#model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=1e-4),\n",
     "#              loss='sparse_categorical_crossentropy',metrics=['accuracy'])\n",
     "\n",
     "model = tf.keras.models.Sequential([\n",
-    "            tf.keras.layers.Dense(10, activation='relu', kernel_initializer='normal'),\n",
-    "            tf.keras.layers.Dense(50, activation='relu', kernel_initializer='normal'),    \n",
-    "            tf.keras.layers.Dense(10, activation='relu', kernel_initializer='normal'),\n",
-    "            tf.keras.layers.Dense(1,  kernel_initializer='normal'),\n",
+    "            tf.keras.layers.Dense(len(x_train.columns), activation='relu', kernel_initializer='normal'),\n",
+    "            tf.keras.layers.Dense(256, activation='relu', kernel_initializer='normal'),    \n",
+    "            tf.keras.layers.Dense(128, activation='relu', kernel_initializer='normal'),    \n",
     "            tf.keras.layers.Dense(13, activation='softmax')])\n",
     "            \n",
     "model.compile(optimizer='adam',loss='sparse_categorical_crossentropy',metrics=['accuracy']) "
@@ -148,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c22c415b",
    "metadata": {},
    "outputs": [
@@ -157,16 +164,40 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "2503155/2503155 [==============================] - 6738s 3ms/step - loss: nan - accuracy: 0.0818\n",
+      "39111/39111 [==============================] - 283s 7ms/step - loss: nan - accuracy: 0.0818\n",
       "Epoch 2/10\n",
-      "2503155/2503155 [==============================] - 6755s 3ms/step - loss: nan - accuracy: 0.0818\n",
+      "39111/39111 [==============================] - 281s 7ms/step - loss: nan - accuracy: 0.0818\n",
       "Epoch 3/10\n",
-      "1224407/2503155 [=============>................] - ETA: 4:02:06 - loss: nan - accuracy: 0.0818"
+      "39111/39111 [==============================] - 282s 7ms/step - loss: nan - accuracy: 0.0818\n",
+      "Epoch 4/10\n",
+      "39111/39111 [==============================] - 288s 7ms/step - loss: nan - accuracy: 0.0818\n",
+      "Epoch 5/10\n",
+      "39111/39111 [==============================] - 298s 8ms/step - loss: nan - accuracy: 0.0818\n",
+      "Epoch 6/10\n",
+      "39111/39111 [==============================] - 288s 7ms/step - loss: nan - accuracy: 0.0818\n",
+      "Epoch 7/10\n",
+      "39111/39111 [==============================] - 289s 7ms/step - loss: nan - accuracy: 0.0818\n",
+      "Epoch 8/10\n",
+      "39111/39111 [==============================] - 295s 8ms/step - loss: nan - accuracy: 0.0818\n",
+      "Epoch 9/10\n",
+      "39111/39111 [==============================] - 282s 7ms/step - loss: nan - accuracy: 0.0818\n",
+      "Epoch 10/10\n",
+      "39111/39111 [==============================] - 282s 7ms/step - loss: nan - accuracy: 0.0818\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x7f2c38aa1c30>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "bs = 16\n",
+    "bs = 1024\n",
     "\n",
     "model.fit(x_train, y_train, epochs=10,batch_size=bs,steps_per_epoch=int(len(x_train)//bs))"
    ]
@@ -206,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
